deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sainte-city-run2021
  labels:
    app.kubernetes.io/name: sainte-city-run2021
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sainte-city-run2021
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sainte-city-run2021
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: sainte-city-run2021
          securityContext:
            {}
          image: ghcr.io/eze-kiel/sainte-city-run2021:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
      imagePullSecrets:
      - name: docker-packages
