deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sainte-city-run2021
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: pwnthe.net
    http:
      paths:
      - backend:
          service:
            name: sainte-city-run2021
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - sainte-city-run2021.hugoblanc.com
      secretName: sainte-city-run2021-tls
